sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: value ToDouble is not a member of Int
      gap = (gap.ToDouble / 1.3).ToInt;
                 ^